v1.8.Beta: Geração do DET na versão MVP funcionando (ainda necessita melhorias);