@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.jcaguiar</groupId>
 	<artifactId>det-maker-api</artifactId>
-	<version>v1.7.Beta</version>
+	<version>v1.8.Beta</version>
 	<name>DetMakerApi</name>
 	<description>
 		API back-end para o sistema Det-Maker usando Java 16 com Spring-Boot,
@@ -200,6 +200,7 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
